# hill_descent

./: .gitignore  AGENTS.md  BENCHMARK_ANALYSIS_AND_PARALLELIZATION.md  CHANGELOG.md  Cargo.toml  Cargo_old.toml  Cargo_workspace.toml  IMPROVEMENT_PLAN.md  ITERATOR_OPTIMIZATION_PLAN.md  M6_IMPLEMENTATION_PLAN.md  M6_IMPLEMENTATION_VERIFICATION.md  MEMORY_ALLOCATION_ANALYSIS.md  PARALLELIZATION_ANALYSIS.md  PERFORMANCE_FIX_PLAN.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_PARALLELIZATION_SPEC.md  PR_10_VERIFICATION_REPORT.md  README.md  THREAD_PER_REGION_SPEC.md  Untitled-1.json  Untitled-2.json  analyze_profiles.py  compare_benchmarks.py  pdd.md  todo.md
.github/: copilot-instructions.md
hill_descent_lib/: CRATES_IO_PUBLICATION_PLAN.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STAGE_1_API_AUDIT.md  STAGE_1_COMPLETE.md  pdd.md
hill_descent_lib/benches/: hundred_parameter_benchmark.rs
hill_descent_lib/examples/: custom_function.rs  multi_dimensional.rs  simple_optimization.rs
hill_descent_lib/src/: gen_hybrid_range.rs  lib.rs  test_utils.rs  tracing_init.rs  training_data.rs  wasm_interface.rs
hill_descent_lib/src/gamete/: mod.rs  new_random_gamete.rs  reproduce.rs
hill_descent_lib/src/locus/: locus_adjustment.rs  mod.rs  mutate.rs  new_random_locus.rs  new_random_locus_adjustment.rs
hill_descent_lib/src/parameters/: global_constants.rs  mod.rs  parameter.rs  parameter_enhancement.rs  system_parameters.rs
hill_descent_lib/src/phenotype/: asexual_reproduction.rs  compute_expressed.rs  mod.rs  new_random_phenotype.rs  sexual_reproduction.rs
hill_descent_lib/src/world/: format_score.rs  get_best_organism.rs  get_best_params.rs  get_best_score.rs  get_state.rs  get_state_for_web.rs  mod.rs  remove_dead.rs  run_epoch.rs  single_valued_function.rs  training_run.rs  validate_training_sets.rs  world_function.rs
hill_descent_lib/src/world/dimensions/: adjust_dimension_limits.rs  adjust_limits.rs  calculate_dimensions_key.rs  divide_dimension.rs  mod.rs  new.rs
hill_descent_lib/src/world/dimensions/dimension/: get_interval.rs  interval_bounds.rs  mod.rs  new.rs
hill_descent_lib/src/world/organisms/: best.rs  find_spacial_limits.rs  generate_random_phenotypes.rs  increment_ages.rs  mod.rs  new.rs  run_all.rs  update_all_region_keys.rs
hill_descent_lib/src/world/organisms/organism/: increment_age.rs  mod.rs  parent_tracking_tests.rs  run.rs  update_region_key.rs
hill_descent_lib/src/world/regions/: add_organisms.rs  adjust_regions.rs  calculate_dimension_stats.rs  count_unique_values_with_tolerance.rs  derive_region_seed.rs  find_most_diverse_index.rs  get_most_common_key.rs  get_most_diverse_dimension.rs  mod.rs  parallel_process.rs  prune_empty_regions.rs  refill.rs  repopulate.rs  sort_regions.rs  truncate_regions.rs  update.rs  update_all_region_min_scores.rs  update_carrying_capacities.rs  update_carrying_capacities_with_zones.rs  zone_capacity_allocation.rs  zones.md
hill_descent_lib/src/world/regions/region/: execute_reproduction_passes.rs  execute_single_reproduction_pass.rs  mod.rs  pair_organisms_for_reproduction.rs  perform_asexual_reproduction.rs  perform_sexual_reproduction.rs  process_region.rs  region_key.rs  reproduce.rs
hill_descent_lib/src/world/regions/region/region_handle_dispenser/: get_adjacent_full_keys.rs  get_or_insert.rs  merge_zones.rs  region_handle.rs  region_key_dispenser.md  reset.rs
hill_descent_lib/src/world/regions/region/region_key_dispenser/: get_adjacent_full_keys.rs  get_or_insert.rs  get_region_key.rs  insert_region_key.rs  merge_zones.rs  mod.rs  region_handle_dispenser.md  region_key.rs  region_key_dispenser.md  reset.rs
hill_descent_lib/src/world/regions/region_handle_dispenser/: get_adjacent_full_keys.rs  get_or_insert.rs  merge_zones.rs  region_handle.rs  reset.rs
hill_descent_lib/src/world/regions/zone_calculator/: mod.rs  zone_cache.rs
hill_descent_lib/tests/: ackley_convergence_failure_test.rs  organism_persistence_test.rs  parallel_determinism_test.rs  simple_test.rs  two_d_ackley_test.rs  two_d_bukin_n6_test.rs  two_d_himmelblau_test.rs  two_d_levi_n13_test.rs  two_d_rastrgin_test.rs  two_d_schaffer_n2_test.rs  two_d_simple_test.rs  two_d_styblinski_tang_test.rs  zone_mapping_test.rs
hill_descent_lib2/: Cargo.toml  IMPLEMENTATION_PLAN.md  pdd.md
hill_descent_lib2/benches/: expensive_fitness_benchmark.rs  hundred_parameter_benchmark.rs  thread_count_benchmark.rs  thread_count_fine_benchmark.rs
hill_descent_lib2/src/: format_score.rs  lib.rs  training_data.rs
hill_descent_lib2/src/gamete/: reproduce.rs
hill_descent_lib2/src/locus/: mod.rs  mutate.rs  new_random_locus.rs  new_random_locus_adjustment.rs
hill_descent_lib2/src/organism/: calculate_region_key_impl.rs  evaluate_fitness_impl.rs  increment_age_impl.rs  mod.rs  process_epoch_impl.rs  reproduce_impl.rs
hill_descent_lib2/src/parameters/: global_constants.rs  mod.rs  parameter_enhancement.rs  system_parameters.rs
hill_descent_lib2/src/phenotype/: calculate_crossovers.rs  compute_expressed_hash.rs  new_random_phenotype.rs  sexual_reproduction.rs
hill_descent_lib2/src/world/: age_and_cull.rs  calculate_region_keys.rs  evaluate_fitness.rs  get_best_organism.rs  get_best_params.rs  get_best_score.rs  get_state_for_web.rs  mod.rs  new.rs  process_epoch.rs  reproduction.rs  setup_world.rs  single_valued_function.rs  training_run.rs  world_function.rs  world_struct.rs
hill_descent_lib2/src/world/dimensions/: calculate_dimensions_key.rs  dimension.rs  expand_bounds.rs  mod.rs  new.rs
hill_descent_lib2/src/world/regions/: organism_entry.rs  populate.rs  process.rs  region_key.rs  update_carrying_capacities.rs
hill_descent_lib2/tests/: golden_determinism_test.rs  integration_test.rs  two_d_ackley_test.rs  two_d_bukin_n6_test.rs  two_d_himmelblau_test.rs  two_d_levi_n13_test.rs  two_d_rastrigin_test.rs  two_d_schaffer_n2_test.rs  two_d_styblinski_tang_test.rs
hill_descent_lib3/: Cargo.toml  (+1 more)
hill_descent_server/: Cargo.toml
hill_descent_server/src/: main.rs
hill_descent_server/web/: index.html  main.js  style.css  web_pdd.md
(+169 files in other folders)
