[package]
name = "hill_descent"
version = "0.1.0"
edition = "2024"

[dependencies]
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = { version = "0.9.1", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unused = "warn"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hundred_parameter_benchmark"
harness = false

[profile.bench]
debug = true
