[package]
name = "hill_descent"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"

[features]
wasm = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unused = "warn"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hundred_parameter_benchmark"
harness = false




[profile.bench]
debug = true
