[workspace]
members = ["hill_descent_lib", "hill_descent_lib2", "hill_descent_lib3", "hill_descent_server", "hill_descent_benchmarks"]
resolver = "2"

[workspace.dependencies]
# Common dependencies that both crates might use
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = { version = "0.9", features = ["small_rng", "std_rng"] }
getrandom = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "env-filter",
    "time",
] }
tracing-log = { version = "0.2" }
mimalloc = { version = "0.1" }

# Web server specific dependencies
axum = "0.8"
axum-macros = "0.4"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
