[package]
name = "hill_descent_lib"
version = "0.1.0"
edition = "2024"
authors = ["Mick Caine <mick.caine@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Genetic algorithm library for n-dimensional optimization problems"
repository = "https://github.com/cainem/hill_descent"
# readme = "README.md"  # Will be added in Stage 3
keywords = ["optimization", "genetic-algorithm", "hill-descent", "evolution", "fitness"]
categories = ["algorithms", "science"]

[dependencies]
xxhash-rust = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
log = { version = "0.4", optional = true }
indexmap = { version = "2.11", features = ["serde", "rayon"] }
rustc-hash = "2.1"
rayon = "1.10"
mimalloc = { workspace = true }

[features]
enable-tracing = ["tracing", "tracing-subscriber", "tracing-log", "log"]

[lib]
crate-type = ["rlib"]

[lints.rust]
unused = "warn"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hundred_parameter_benchmark"
harness = false

[profile.bench]
debug = true
