[package]
name = "hill_descent_server"
version = "0.2.0"
edition = "2024"

[dependencies]
# Use the original lib architecture
hill_descent_lib = { path = "../hill_descent_lib" }
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
